@@ -23,3 +23,4 @@ gconf-2.0.pc
 gconf.spec
 gconf.m4
 GConf-*.tar.gz
+mkinstalldirs
