@@ -1,3 +1,12 @@
+2005-09-13  Stepan Kasal  <kasal@ucw.cz>
+
+	* gconf-2.m4.in (AM_GCONF_SOURCE_2): Simplify the handling of
+	--enable-schemas-install.
+	* Makefile.am (EXTRA_DIST): Remove sources for files gnerated at
+	config time; they are distributed automatically.
+	(DISTCLEANFILES): Deleted; we don't use intltool here.
+	* .cvsignore: Add mkinstalldirs.
+
 2005-09-10  Tor Lillqvist  <tml@novell.com>
 
 	* gconf/gconf-backend.c (gconf_address_resource): On Win32, do
